--- a/plantilla/index.html
+++ b/plantilla/index.html
@@ -80,6 +80,6 @@
 <!-- aux js -->
 <script src="../src/js/coffeSoft.js"></script>
 <script src="../src/js/plugins.js"></script>
-<script src="src/js/pivote-administrador.js?t=<?php echo time(); ?>"></script>
+<script src="src/js/app.js?t=<?php echo time(); ?>"></script>
 
 </html>
